# webapi/docs/swagger.yaml
@@ -8,7 +8,7 @@ definitions:
         description: 用户密码
         type: string
       user_id:
-        description: 用户Id
+        description: 学号/工号
         type: string
       vcode:
         description: 验证码
@@ -27,42 +27,12 @@ definitions:
       password:
         description: 旧账户密码
         type: string
+      user_id:
+        description: 学生学号/教师工号
+        type: string
     required:
     - new_password
     - password
-    type: object
-  form_req.CourseListReq:
-    properties:
-      class:
-        description: 班级
-        type: integer
-      create_tm:
-        description: 创建时间
-        type: string
-      grade:
-        description: 年级
-        type: integer
-      ordering_create_tm:
-        description: 根据创建时间排序 "create_tm" "-create_tm"
-        type: string
-      ordering_grade:
-        description: 根据年级排序 "grade" "-grade
-        type: string
-      ordering_total_member:
-        description: 根据班级总人数排序 "total_member" "-total_member"
-        type: string
-      page:
-        description: 页数,用于分页
-        type: integer
-      page_size:
-        description: 每页数量，用于分页
-        type: integer
-      search:
-        description: 根据课程名搜索
-        type: string
-      user_id:
-        description: 教师工号
-        type: integer
     type: object
   form_req.CreateCourseReq:
     properties:
@@ -75,15 +45,13 @@ definitions:
       grade:
         description: 年级
         type: integer
-      user_id:
-        description: 教师工号
-        type: integer
+    required:
+    - class
+    - course_name
+    - grade
     type: object
   form_req.CreateExercisesReq:
     properties:
-      course_id:
-        description: 课程号
-        type: integer
       exercises:
         description: 练习题
         items:
@@ -92,56 +60,37 @@ definitions:
       learning_content_id:
         description: 学习内容id
         type: integer
-      user_id:
-        description: 教师工号
-        type: string
+    required:
+    - exercises
+    - learning_content_id
     type: object
   form_req.CreateLearningContentReq:
     properties:
       course_id:
         description: 课程id
         type: integer
-      file_name:
-        description: 文件名
-        type: string
-      title:
-        description: 学习标题
-        type: string
-      user_id:
-        description: 教师工号
-        type: string
+    required:
+    - course_id
     type: object
   form_req.CreateRegisterReq:
     properties:
-      course_id:
-        description: 课程号
-        type: integer
-      create_tm:
-        description: 创建时间
-        type: string
-      learning_content_id:
+      content_id:
         description: 学习内容id
         type: integer
       register_tm:
         description: 签到时间限制，默认为2分钟
-        type: string
-      user_id:
-        description: 教师工号
-        type: string
+        type: integer
+    required:
+    - content_id
+    - register_tm
     type: object
   form_req.CreateTalkReq:
     properties:
-      course_id:
-        description: 课程号
-        type: integer
-      learning_content_id:
+      content_id:
         description: 学习内容id
         type: integer
       talk:
         description: 讨论主题
-        type: string
-      user_id:
-        description: 教师工号
         type: string
     type: object
   form_req.CreateUserReq:
@@ -171,6 +120,7 @@ definitions:
     - confirm
     - password
     - role
+    - user_id
     - username
     type: object
   form_req.DeleteCourseReq:
@@ -178,26 +128,63 @@ definitions:
       course_id:
         description: 课程id
         type: integer
-      user_id:
-        description: 教师工号
+    required:
+    - course_id
+    type: object
+  form_req.EnterCourseReq:
+    properties:
+      course_id:
+        description: 课程id
         type: integer
+    required:
+    - course_id
+    type: object
+  form_req.ExercisesAnswer:
+    properties:
+      answer:
+        description: 答案
+        type: string
+      id:
+        description: 习题id
+        type: integer
+    required:
+    - answer
+    - id
     type: object
   form_req.ExercisesItem:
     properties:
       answer:
         description: 答案
         type: string
-      question:
-        description: 题目
-        type: string
-    type: object
-  form_req.ExercisesReq:
-    properties:
-      answer:
-        description: 答案
+      options:
+        description: 选项
         items:
           type: string
         type: array
+      question:
+        description: 题目
+        type: string
+      type:
+        description: 类型 1-选择 2-判断
+        type: integer
+    required:
+    - answer
+    - question
+    - type
+    type: object
+  form_req.ExercisesReq:
+    properties:
+      answers:
+        description: 答案提交
+        items:
+          $ref: '#/definitions/form_req.ExercisesAnswer'
+        type: array
+      content_id:
+        description: 内容id
+        type: integer
+    required:
+    - answers
+    - content_id
     type: object
   form_req.LearningContentListReq:
     properties:
@@ -219,39 +206,32 @@ definitions:
       search:
         description: 根据学习内容搜索
         type: string
-      user_id:
-        description: 教师工号/学生学号
-        type: string
+    required:
+    - course_id
     type: object
   form_req.LearningReq:
     properties:
-      course_id:
-        description: 课程id
-        type: integer
-      file_path:
-        description: 文件路径
-        type: string
-      learning_content_id:
+      content_id:
         description: 学习内容id
         type: integer
-      user_id:
-        description: 教师工号/学生学号
+      file_name:
+        description: 文件名
         type: string
+    required:
+    - content_id
+    - file_name
     type: object
   form_req.LearningResultReq:
     properties:
-      course_id:
-        description: 课程id
-        type: integer
-      learning_content_id:
+      content_id:
         description: 学习内容id
         type: integer
       status:
         description: 学习状态 learned-已学习/unlearned-未学习
         type: string
-      user_id:
-        description: 教师工号
-        type: string
+    required:
+    - content_id
+    - status
     type: object
   form_req.NoticeReq:
     properties:
@@ -267,30 +247,23 @@ definitions:
     type: object
   form_req.RegisterReq:
     properties:
-      course_id:
-        description: 课程号
-        type: integer
-      learning_content_id:
+      content_id:
         description: 学习内容id
         type: integer
-      user_id:
-        description: 学生学号
-        type: string
+    required:
+    - content_id
     type: object
   form_req.RegisterResultReq:
     properties:
-      course_id:
-        description: 课程号
-        type: integer
-      learning_content_id:
+      content_id:
         description: 学习内容id
         type: integer
       register_result:
         description: 签到结果，unfinished-未签到/finished-已签到
-        type: integer
-      user_id:
-        description: 教师工号
         type: string
+    required:
+    - content_id
+    - register_result
     type: object
   form_req.TalkInfoReq:
     properties:
@@ -303,9 +276,6 @@ definitions:
       talk_id:
         description: 讨论id
         type: integer
-      user_id:
-        description: 教师工号
-        type: string
     type: object
   form_req.TalkReq:
     properties:
@@ -318,9 +288,6 @@ definitions:
       talk_id:
         description: 讨论id
         type: integer
-      user_id:
-        description: 教师工号/学生学号
-        type: string
     type: object
   form_req.UpdateCourseReq:
     properties:
@@ -336,36 +303,47 @@ definitions:
       grade:
         description: 年级
         type: integer
-      user_id:
-        description: 教师工号
-        type: integer
-    type: object
-  form_req.UserInfoReq:
-    properties:
-      user_id:
-        description: 学生学号/教师工号
-        type: string
+    required:
+    - course_id
     type: object
   form_req.UserPasswordReq:
     properties:
+      confirm:
+        description: 确认用户密码
+        type: string
+      password:
+        description: 新密码
+        type: string
+      role:
+        description: 用户角色
+        type: integer
       user_id:
         description: 学生学号/教师工号
         type: string
+      user_name:
+        description: 用户名
+        type: string
+    required:
+    - confirm
+    - password
+    - role
+    - user_id
+    - user_name
     type: object
   form_resp.AuthLoginResp:
     properties:
       authorization:
         description: 用户Token信息
         type: string
-      enable:
-        description: 是否允许登录 (true)-允许登录、(false)-拒绝登录
-        type: boolean
       role:
         description: 用户权限
         type: integer
-      uid:
+      user_id:
         description: 用户ID
-        type: integer
+        type: string
+      username:
+        description: 用户名
+        type: string
     type: object
   form_resp.AuthVerifyCodeResp:
     properties:
@@ -414,6 +392,26 @@ definitions:
       correct:
         description: 判断是否正确
         type: boolean
+      id:
+        description: 课后练习id
+        type: integer
+    type: object
+  form_resp.ExercisesItem:
+    properties:
+      id:
+        description: 课后练习id
+        type: integer
+      options:
+        description: 选项
+        items:
+          type: string
+        type: array
+      question:
+        description: 题目
+        type: string
+      type:
+        description: 类型 0-选择 1-判断
+        type: integer
     type: object
   form_resp.ExercisesResp:
     properties:
@@ -422,14 +420,25 @@ definitions:
           $ref: '#/definitions/form_resp.ExerciseResult'
         type: array
     type: object
+  form_resp.GetExercisesResp:
+    properties:
+      count:
+        description: 习题数
+        type: integer
+      results:
+        description: 练习题
+        items:
+          $ref: '#/definitions/form_resp.ExercisesItem'
+        type: array
+    type: object
   form_resp.LearningContentItem:
     properties:
       content:
         description: 学习内容
         type: string
-      file_path:
-        description: 文件路径
-        type: string
+      content_id:
+        description: 学习内容id
+        type: integer
       learned:
         description: 已学习
         type: integer
@@ -525,7 +534,7 @@ definitions:
         description: 注册时间
         type: string
       role:
-        description: 用户角色
+        description: 用户角色 1-老师、2-学生
         type: integer
       user_id:
         description: 学生学号/教师工号
@@ -602,6 +611,35 @@ paths:
       summary: 基础接口 - 用户登出
       tags:
       - common
+  /auth/register/:
+    post:
+      consumes:
+      - application/json
+      description: create user
+      parameters:
+      - description: request data
+        in: body
+        name: auth
+        required: true
+        schema:
+          $ref: '#/definitions/form_req.CreateUserReq'
+      - description: authentication
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: response data
+          schema:
+            $ref: '#/definitions/form_resp.StatusResp'
+      security:
+      - ApiKeyAuth: []
+      summary: 创建用户
+      tags:
+      - 用户管理
   /auth/verifycode/:
     get:
       consumes:
@@ -643,17 +681,47 @@ paths:
       summary: 删除课程
       tags:
       - course
-    post:
+    get:
       consumes:
       - application/x-www-form-urlencoded
       description: course list
       parameters:
-      - description: request data
-        in: body
-        name: auth
-        required: true
-        schema:
-          $ref: '#/definitions/form_req.CourseListReq'
+      - description: 班级
+        in: query
+        name: class
+        type: integer
+      - description: 创建时间
+        in: query
+        name: create_tm
+        type: string
+      - description: 年级
+        in: query
+        name: grade
+        type: integer
+      - description: 根据创建时间排序 "create_tm" "-create_tm"
+        in: query
+        name: ordering_create_tm
+        type: string
+      - description: 根据年级排序 "grade" "-grade
+        in: query
+        name: ordering_grade
+        type: string
+      - description: 根据班级总人数排序 "total_member" "-total_member"
+        in: query
+        name: ordering_total_member
+        type: string
+      - description: 页数,用于分页
+        in: query
+        name: page
+        type: integer
+      - description: 每页数量，用于分页
+        in: query
+        name: page_size
+        type: integer
+      - description: 根据课程名搜索
+        in: query
+        name: search
+        type: string
       produces:
       - application/json
       responses:
@@ -663,7 +731,79 @@ paths:
             $ref: '#/definitions/form_resp.CourseListResp'
       security:
       - ApiKeyAuth: []
+      summary: 课程列表
+      tags:
+      - course
+    post:
+      consumes:
+      - application/x-www-form-urlencoded
+      description: create course
+      parameters:
+      - description: request data
+        in: body
+        name: auth
+        required: true
+        schema:
+          $ref: '#/definitions/form_req.CreateCourseReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: response data
+          schema:
+            $ref: '#/definitions/form_resp.StatusResp'
+      security:
+      - ApiKeyAuth: []
       summary: 新建课程
+      tags:
+      - course
+  /v1/course/class:
+    get:
+      consumes:
+      - application/x-www-form-urlencoded
+      description: get class list
+      parameters:
+      - description: 年级
+        in: query
+        name: grade
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: response data
+          schema:
+            items:
+              type: integer
+            type: array
+      security:
+      - ApiKeyAuth: []
+      summary: 获取班级列表
+      tags:
+      - course
+  /v1/course/enter:
+    post:
+      consumes:
+      - application/x-www-form-urlencoded
+      description: enter course
+      parameters:
+      - description: request data
+        in: body
+        name: auth
+        required: true
+        schema:
+          $ref: '#/definitions/form_req.EnterCourseReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: response data
+          schema:
+            $ref: '#/definitions/form_resp.StatusResp'
+      security:
+      - ApiKeyAuth: []
+      summary: 学生加入课程
       tags:
       - course
   /v1/course/update/:
@@ -691,6 +831,28 @@ paths:
       tags:
       - course
   /v1/exercises/:
+    get:
+      consumes:
+      - application/x-www-form-urlencoded
+      description: get exercises
+      parameters:
+      - description: 内容id
+        in: query
+        name: content_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: response data
+          schema:
+            $ref: '#/definitions/form_resp.GetExercisesResp'
+      security:
+      - ApiKeyAuth: []
+      summary: 获取课后练习
+      tags:
+      - exercises
     post:
       consumes:
       - application/x-www-form-urlencoded
@@ -1006,12 +1168,6 @@ paths:
       - application/json
       description: get user info
       parameters:
-      - description: request data
-        in: body
-        name: auth
-        required: true
-        schema:
-          $ref: '#/definitions/form_req.UserInfoReq'
       - description: authentication
         in: header
         name: Authorization
@@ -1027,34 +1183,6 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 获取用户信息
-      tags:
-      - 用户管理
-    post:
-      consumes:
-      - application/json
-      description: create user
-      parameters:
-      - description: request data
-        in: body
-        name: auth
-        required: true
-        schema:
-          $ref: '#/definitions/form_req.CreateUserReq'
-      - description: authentication
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: response data
-          schema:
-            $ref: '#/definitions/form_resp.StatusResp'
-      security:
-      - ApiKeyAuth: []
-      summary: 创建用户
       tags:
       - 用户管理
   /v1/user/change_password/:
@@ -1112,7 +1240,7 @@ paths:
             $ref: '#/definitions/form_resp.UserPasswordResp'
       security:
       - ApiKeyAuth: []
-      summary: 获取用户密码
+      summary: 忘记密码
       tags:
       - 用户管理
 swagger: "2.0"
